--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "json-server": "^0.17.3",
-    "react": "^18.2.0",
+    "material-design-icons": "^3.0.1",
+    "react": "^18.3.1",
     "react-country-flag": "^3.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
